# Study-Plan-Optimization-Engine

./: .env.example  .gitignore  README.md  availability.py  long_term_planner.py  main.py  metrics.py  models.py  models_pydantic.py  optimizer_loader.py  pdf_extractor.py  planner_core.py  preprocess.py  pyproject.toml  requirement.txt  short_term_planner.py
Plans_Output/: Computer Engineering Mathematics II_long_term_plan.json  Computer Engineering Mathematics II_short_term_plan.json  Embedded System_long_term_plan.json  Embedded System_short_term_plan.json  Statistics for Computer Engineering_long_term_plan.json  Statistics for Computer Engineering_short_term_plan.json  global_long_term_plan.json  global_short_term_plan.json  summary_metrics.json
Subjects_Input/: cem-ii.json  embedded.json  stats.json
app/: streamlit_app.py
