[project]
name = "study-plan-optimization-engine"
version = "0.1.0"
description = "A study plan optimization engine."
authors = ["Kongfha <your-email@example.com>"]

dependencies = [
	"pandas",
	"streamlit",
	"pydantic>=2.0",
	"langchain>=0.1.0",
	"langchain-google-genai>=1.0.0",
	"pypdf>=3.17.0",
	"python-dotenv>=1.0.0"
]

[tool.uv]
# Add uv-specific configuration here if needed
